--- a/ImageSelect/src/main/res/layout/image_select_cmp_customer_display_bar.xml
+++ b/ImageSelect/src/main/res/layout/image_select_cmp_customer_display_bar.xml
@@ -7,12 +7,11 @@
 
     <ImageView
         android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_centerVertical="true"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:src="@drawable/image_select_btn_back" />
+       android:padding="16dp"
+        android:src="@mipmap/image_select_btn_back" />
 
     <TextView
         android:id="@+id/count_text"
