--- a/ImageSelect/src/main/res/layout/image_select_list_item_image.xml
+++ b/ImageSelect/src/main/res/layout/image_select_list_item_image.xml
@@ -5,7 +5,7 @@
     <ImageView
         android:id="@+id/image"
         android:scaleType="centerInside"
-        android:src="@drawable/image_select_default_error"
+        android:src="@mipmap/image_select_default_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -21,8 +21,8 @@
         android:layout_gravity="top|right"
         android:layout_marginTop="5.5dp"
         android:layout_marginRight="5.5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/image_select_btn_unselected"/>
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@mipmap/image_select_btn_unselected"/>
 
 </FrameLayout>
